--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "stripe/stripe-php": "^4.3",
+        "zondicons/blade-bridge": "^0.1.0",
+        "nothingworks/blade-svg": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
