--- a/package.json
+++ b/package.json
@@ -14,5 +14,18 @@
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.15.3",
+    "bootstrap-sass": "^3.3.7",
+    "es6-promise": "^4.0.5",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.1",
+    "laravel-elixir-vue-2": "^0.2.0",
+    "laravel-elixir-webpack-official": "^1.0.10",
+    "lodash": "^4.17.4",
+    "normalize.css": "^5.0.0",
+    "suitcss-base": "^2.0.0",
+    "vue": "^2.1.8"
   }
 }
