--- a/package.json
+++ b/package.json
@@ -5,27 +5,19 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "axios": "^0.16.1",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-14",
-    "laravel-elixir-vue-2": "^0.2.0",
+    "laravel-elixir": "^6.0.0-11",
+    "laravel-elixir-vue-2": "^0.3.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue": "^2.0.1"
   },
   "dependencies": {
-    "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
     "es6-promise": "^4.0.5",
-    "gulp": "^3.9.1",
-    "jquery": "^3.1.1",
-    "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.10",
-    "lodash": "^4.17.4",
-    "normalize.css": "^5.0.0",
-    "suitcss-base": "^2.0.0",
-    "vue": "^2.1.8"
+    "normalize.css": "^6.0.0",
+    "suitcss-base": "^2.0.0"
   }
 }
