--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "zondicons/blade-bridge": "^0.1.0",
         "stripe/stripe-php": "^4.3",
         "guzzlehttp/guzzle": "^6.2",
-        "hashids/hashids": "^2.0"
+        "hashids/hashids": "^2.0",
+        "laravel/dusk": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -28,9 +29,9 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests"
-        ]
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "scripts": {
         "post-root-package-install": [
