--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "stripe/stripe-php": "^4.3",
         "guzzlehttp/guzzle": "^6.2",
         "hashids/hashids": "^2.0",
-        "laravel/dusk": "^1.1"
+        "laravel/dusk": "^1.1",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
