--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "hashids/hashids": "^2.0",
         "laravel/dusk": "^1.1",
         "laravel/tinker": "^1.0",
-        "filp/whoops": "~2.0"
+        "filp/whoops": "~2.0",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
