--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_KEY=base64:CtjhQL0LUzf9Qb3FW276C89VN+OIkUoqcPIm94NbncA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://ticketbeast.dev
+APP_URL=http://ticketbeast.test
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
