--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/dusk": "^2.0.10",
         "laravel/tinker": "^1.0",
         "filp/whoops": "~2.0",
-        "intervention/image": "^2.4"
+        "intervention/image": "^2.4",
+        "kitetail/zttp": "^0.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
